--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -1,19 +1,8 @@
 .question {
     margin: 50px auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     background-color: rgb(228, 230, 235);
     padding: 15px 20px 0 10px;
-    width: 100%;
-}
-  
-.image-name {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    border-radius: 2px;
 }
   
 .question-image {
@@ -21,33 +10,14 @@
     height: 90px;
     border-radius: 100%;
 }
-  
-.title-tags {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    
-}
-  
-.question-tags {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-  
+
 .title {
-    color: rgb(30, 30, 110);
+    margin: 0 20px;
 }
   
 .tag {
     background-color: rgb(204, 205, 207);
     padding: 1px 3px;
-    margin: 0 5px;
-}
-  
-.question-upvote {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin: 10px 5px;
+    font-style: italic;
 }
