--- a/src/components/QuestionModel.css
+++ b/src/components/QuestionModel.css
@@ -1,11 +1,33 @@
 .model {
     max-width: 60%;
     margin: 50px auto;
-    background-color: aliceblue;
+    background-color: rgb(228, 230, 235);
     padding: 20px;
 }
 
-i {
-    height: 20px !important;
-    width: 20px !important;
+.model-image {
+    height: 170px;
+    width: 170px;
+}
+
+.model-title-tags {
+    margin: 0 20px;
+}
+
+.cross {
+    font-size: 30px;
+}
+
+.i-icon {
+    font-size: 20px;
+}
+
+.stats {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.stack-link {
+    margin: 30px 0;
 }
